agregado Mediador.js

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       </div>
     </div>
 
-    <script src="./Namespace.js"></script>
+    <script src="./Mediador.js"></script>
   </body>
 </html>
